fix: minor fix size and addition overflow properties for portfolio & service blocks

--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ body {
   --color__services-secondary: #767e9e;
   --color__services-border: white;
 
-  padding: 59px 40px 72px 40px;
+  padding: 59px 40px 65px 40px;
   background-color: #f2f2f2;
   border-bottom: 6px solid var(--color__services-border);
   box-sizing: border-box;
@@ -299,7 +299,7 @@ body {
 
 .services__column-layout {
   display: grid;
-  grid-row-gap: 45px;
+  grid-row-gap: 37px;
   grid-column-gap: 20px;
   grid-template-columns: repeat(auto-fill, minmax(295px, 1fr));
 }
@@ -318,23 +318,28 @@ body {
 .rich-icon__title {
   transition: color 1s ease;
   margin: 0;
-  height: 17px;
-  font-size: 18px;
-  font-weight: 900;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 0.8;
-  text-align: justify;
-  letter-spacing: -0.1px;
-  color: var(--color__services-primary);
   padding-bottom: 9px;
+  height: 17px;
+  overflow: hidden;
+  text-align: justify;
+  text-overflow: ellipsis;
+  line-height: 0.8;
+  letter-spacing: -0.1px;
+  white-space: nowrap;
+  color: var(--color__services-primary);
+  font-size: 18px;
+  font-stretch: normal;
+  font-weight: 900;
+  font-style: normal;
 }
 
 .rich-icon__description {
   margin: 0;
-  height: 52px;
+  height: 60px;
+  overflow: hidden;
   text-align: justify;
-  line-height: 1.835;
+  text-overflow: ellipsis;
+  line-height: 21px;
   letter-spacing: normal;
   color: var(--color__services-secondary);
   font-size: 12px;
@@ -505,6 +510,8 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   grid-gap: 20px;
   padding-top: 19px;
+  max-width: 620px;
+  overflow: hidden;
 }
 
 .Button {
@@ -670,6 +677,7 @@ body {
   line-height: 29px;
   color: var(--color__get-qoute-title-color);
   font-size: 18px;
+  text-align: justify;
 }
 .get-quote__content-wrapper {
   display: flex;
@@ -749,6 +757,7 @@ body {
   line-height: 22px;
   color: var(--color__get-qoute-title-color);
   font-size: 12px;
+  text-align: justify;
 }
 .get-quote__contact {
   padding-top: 20px;
